--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "echo \"cleaning node_modules\"  && rm -rf node_modules",
+    "build": "npm install && npx nodmon index.js",
+    "rebuild": "npm run clean && npm run build",
+    "start-dev": "nodemon index.js",
+    "create_db": "make",
+    "clean_db": "make clean"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.18.1",
@@ -22,5 +29,8 @@
     "url": "https://github.com/lewfer/gs-dwa-lab-3.1/issues"
   },
   "homepage": "https://github.com/lewfer/gs-dwa-lab-3.1#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
